--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(FM_fishline_2_rdbes)
 export(FO_fishline_2_rdbes)
 export(FT_fishline_2_rdbes)
 export(LE_fishline_2_rdbes)
-export(LO_fishline_2_rdbes)
 export(SA_fishline_2_rdbes)
 export(SL_fishline_2_rdbes)
 export(SS_fishline_2_rdbes)
@@ -13,19 +12,24 @@ export(TE_fishline_2_rdbes)
 export(VD_fishline_2_rdbes)
 export(VS_fishline_2_rdbes)
 export(gear_info_fishline_2_rdbes)
-import(data.table)
+export(getDataModel)
+export(get_data_model)
 import(knitr)
+import(purrr)
 importFrom(RODBC,odbcConnect)
 importFrom(RODBC,sqlQuery)
 importFrom(data.table,data.table)
 importFrom(data.table,setnames)
 importFrom(dplyr,distinct)
+importFrom(dplyr,join_by)
 importFrom(dplyr,left_join)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(lubridate,today)
+importFrom(lubridate,year)
 importFrom(openxlsx,read.xlsx)
 importFrom(purrr,map)
 importFrom(purrr,map2)
-importFrom(purrr,map2_lgl)
 importFrom(purrr,map_lgl)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_split_fixed)
