New doc and build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,13 @@ importFrom(RODBC,odbcConnect)
 importFrom(RODBC,sqlQuery)
 importFrom(data.table,data.table)
 importFrom(data.table,setnames)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,join_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(haven,read_sas)
 importFrom(lubridate,today)
 importFrom(lubridate,year)
 importFrom(openxlsx,read.xlsx)
