--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(FT_fishline_2_rdbes)
 export(LE_fishline_2_rdbes)
 export(LO_fishline_2_rdbes)
 export(SA_fishline_2_rdbes)
+export(SA_get_data)
 export(SL_fishline_2_rdbes)
 export(SS_fishline_2_rdbes)
 export(TE_fishline_2_rdbes)
